--- a/tcsoundboard/css/style.css
+++ b/tcsoundboard/css/style.css
@@ -2,7 +2,7 @@ html {
   border-left-style: solid;
   border-width: 30px;
   border-color: orange;
-  height: 100%;
+/*   height: 100%; */
 }
 
 body {
@@ -67,12 +67,18 @@ a {
 
 
 @media only screen and (max-width: 768px) {
+
+  html {
+    border-width: 12px;
+  }
+  
   .appContainer {
     margin: auto;
     width: 90vw;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 120px 120px 120px;
+    grid-template-rows: 150px 150px 150px;
+    grid-gap: 1px;
     padding: 2px;
   }
   
@@ -84,20 +90,20 @@ a {
   }
   
   .sound-card {
-    width: 90px;
-    height: 90px;
+    width: 80px;
+    height: 80px;
+    max-width: 100px;
+    max-height: 85px;
+
 	border-width: 3px;
 	border-color: #5BAF59;
 	padding: 5px;
 	cursor: pointer;
   }
   
-  html {
-    border-width: 12px;
-  }
-  
   body {
-  	font-size: 3vw;
+  	font-size: 11px;
   }
+
 }
 
