--- a/tcsoundboard/css/style_workingbutugly.css
+++ b/tcsoundboard/css/style_workingbutugly.css
@@ -2,13 +2,13 @@ html {
   border-left-style: solid;
   border-width: 30px;
   border-color: orange;
-  height: 100%;
+/*   height: 100%; */
 }
 
 body {
   font-family: Futura, "Century Gothic", sans-serif;
   font-weight: bold;
-  font-size: 2vw;
+  font-size: 22px;
   background-color: white;
 }
 
@@ -26,6 +26,12 @@ body {
   padding-bottom: 40px;
 }
 
+.sound-card-text {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 5px;
+}
+
 p {
   text-align: center;
 }
@@ -36,25 +42,27 @@ a {
 
 .appContainer {
   margin: auto;
-  width: 90vw;
+  width: 1000px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 18vw;
-  grid-gap: 15px;
+  grid-template-rows: 200px 200px 200px;
+  padding: 2px;
 }
 
 .sound-card {
-  display: flex;
-  align-items: center;      /* new */
-  justify-content: center;  /* new */
-  text-align: center;
+  display: table;
+  margin: auto;
+  width: 160px;
+  height: 160px;
   background-color: #FFFFFF;
   color: #5BAF59;
   border-style: solid;
   border-width: 5px;
   border-color: #5BAF59;
+  text-align: center;
+  padding: 6px;
   cursor: pointer;
-  padding: 5px;
+  vertical-align: middle;
 }
 
 
@@ -62,15 +70,16 @@ a {
 
   html {
     border-width: 12px;
-    height: 100%;
   }
   
   .appContainer {
-	width: 80vw;
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-	grid-auto-rows: 26vw;
-	grid-gap: 15px;
+    margin: auto;
+    width: 90vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 150px 150px 150px;
+    grid-gap: 1px;
+    padding: 2px;
   }
   
   .logoimg {
@@ -81,15 +90,26 @@ a {
   }
   
   .sound-card {
+    width: 80px;
+    height: 80px;
+    max-width: 100px;
+    max-height: 85px;
+
 	border-width: 3px;
-	padding: 3px;
+	border-color: #5BAF59;
+	padding: 4px;
 	cursor: pointer;
   }
   
   body {
-  	font-size: 2.65vw;
+  	font-size: 10px;
+  }
+  
+  .sound-card-text {
+	display: table-cell;
+	vertical-align: middle;
+	padding: 2px;
   }
 
 }
-
 
