--- a/tcsoundboard/css/style.css
+++ b/tcsoundboard/css/style.css
@@ -1,15 +1,17 @@
-html {
-  border-left-style: solid;
-  border-width: 30px;
-  border-color: orange;
-  height: 100%;
-}
-
 body {
   font-family: Futura, "Century Gothic", sans-serif;
   font-weight: bold;
   font-size: 1.8vw;
   background-color: white;
+  /* set padding and margin to 0 to remove default margins   */
+  padding: 0; 
+  margin: 0; 
+}
+
+.borderdiv {
+  border-left-style: solid;
+  border-width: 30px;
+  border-color: orange;
 }
 
 .logodiv {
