--- a/tcsoundboard/css/style.css
+++ b/tcsoundboard/css/style.css
@@ -32,7 +32,8 @@ p {
 }
 
 .footerdiv {
-  padding-top: 75px;
+  padding-top: 100px;
+  padding-bottom: 25px;
   font-weight: normal;
   width: 80vw;
   margin: auto;
@@ -41,15 +42,16 @@ p {
 }
 
 a {
-  color: white;
+  color: #5BAF59;
 }
+
 
 .appContainer {
   margin: auto;
   width: 80vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 16vw; /* this has to be appContainer width / 5 */
+  grid-auto-rows: 16vw; /* this has to be appContainer width divided by 5 */
   grid-gap: 1vw;
 }
 
@@ -78,7 +80,7 @@ a {
 	width: 80vw;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-auto-rows: 26vw;  /* this has to be appContainer width / 3 */
+	grid-auto-rows: 26vw;  /* this has to be appContainer width divided by 3 */
 	grid-gap: 15px;
   }
   
