logo's a bit bigger on mobile

--- a/thelondon_design/css/style_mobile.css
+++ b/thelondon_design/css/style_mobile.css
@@ -47,7 +47,7 @@ figure figcaption {
 .logodiv {
 	margin: auto;
 	padding-top: 30px;
-	width: 275px;
+	width: 35%;
 }
 
 /* applies to thuginitialimg and thuggeneratedimg */
