add links to streaming services

--- a/thelondon_design/css/style.css
+++ b/thelondon_design/css/style.css
@@ -105,7 +105,7 @@ figure figcaption {
 }
 
 #tblogo_img:hover {
-	opacity: 0.5;
+	opacity: 0.75;
 }
 
 .grid-container {
@@ -160,9 +160,19 @@ figure figcaption {
 	text-align: center;
 }
 
+.streaminglink {
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
 .streamingimg {
 	width: 150px;
-	margin: 12px 20px;
+	margin-top: 12px;
+	margin-bottom: 12px;
+}
+
+.streamingimg:hover {
+	opacity: 0.75;
 }
 
 /* scale the snake canvas to be 600x600 (it's 800x800 natively) */
