--- a/tcsoundboard/css/style.css
+++ b/tcsoundboard/css/style.css
@@ -67,12 +67,14 @@ a {
   border-color: #5BAF59;
   cursor: pointer;
   padding: 5px;
-  -webkit-transition: background-color 0.25s, color 0.25s, opacity 0.3s; /* Safari prior 6.1 */
-  transition: background-color 0.25s, color 0.25s, opacity 0.3s;
+  -webkit-transition: background-color 0.4s, color 0.4s, opacity 0.15s; /* Safari prior 6.1 */
+  transition: background-color 0.4s, color 0.4s, opacity 0.15s;
 }
 
 .sound-card:active {
-  opacity: 0.5;
+  opacity: 0.4;
+  background-color: #5BAF59;
+  color: #FFFFFF;
 }
 
 /* hover effect only on web - so no sticky hover on mobile */
