--- a/tcsoundboard/css/style.css
+++ b/tcsoundboard/css/style.css
@@ -51,7 +51,7 @@ a {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; /* 1fr 1fr 1fr 1fr 1fr */
   grid-auto-rows: 13vw; /* this has to be appContainer width divided by 6 (14vw if 5) */
-  grid-gap: 1vw;
+  grid-gap: 0.9vw;
 }
 
 
@@ -63,7 +63,7 @@ a {
   background-color: #FFFFFF;
   color: #5BAF59;
   border-style: solid;
-  border-width: 4px; /* 4px */
+  border-width: 0.285vw; /* 4px */
   border-color: #5BAF59;
   cursor: pointer;
   padding: 5px;
@@ -75,6 +75,10 @@ a {
   opacity: 0.4;
   background-color: #5BAF59;
   color: #FFFFFF;
+}
+
+.sound-card-text {
+  padding: 3px;
 }
 
 /* hover effect only on web - so no sticky hover on mobile */
