century gothic is back

--- a/tcsoundboard/css/style.css
+++ b/tcsoundboard/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Futura, 'Montserrat', Arial, sans-serif;
+  font-family: Futura, 'Century Gothic', 'Montserrat', Arial, sans-serif;
   font-weight: bold;
   font-size: 1.30vw; /* 1.5vw for 5 */ 
   background-color: white;
