optimize new badge on mobile

--- a/tcsoundboard/css/style.css
+++ b/tcsoundboard/css/style.css
@@ -84,9 +84,9 @@ a {
 
 .new-badge {
   position: absolute;
-  width: 3.4vw;
-  top: -20px;
-  right: -20px;
+  width: 3.0vw;
+  top: -1.1vw;
+  right: -1.1vw;
   pointer-events: none;
   z-index: 0;
 }
@@ -137,6 +137,12 @@ a {
   .footerdiv {
   	 font-size: 2vw;		/* 1.75vw */
   	 padding-top: 50px;
+  }
+  
+  .new-badge {
+  	width: 6.5vw;
+  	top: -2.3vw;
+    right: -2.3vw;
   }
 
 }
