--- a/gk/cubpup/style.css
+++ b/gk/cubpup/style.css
@@ -125,8 +125,8 @@ canvas {
   width: 80px;
   height: 80px;
   */
-  width: 70px;
-  height: 70px;
+  width: 67px;
+  height: 67px;
   text-align: center;
   border-radius: 10px;
   position: relative;
@@ -147,14 +147,15 @@ canvas {
   display: block;
   /*	LANCE smaller font size for level number    */
   /* font-size: 30px; */
-  font-size: 25px;
+  font-size: 23px;
   /* line-height: 35px; */
-  line-height: 30px;
+  line-height: 27px;
 }
 
 .level-list__item__blurb {
   display: block;
-  font-size: 16px;
+  /*	LANCE smaller font size for level select blurb    */
+  font-size: 13px;
 }
 
 .level-list__item__check {
