--- a/gk/puzzle_mobile/style.css
+++ b/gk/puzzle_mobile/style.css
@@ -2,7 +2,7 @@ body, html {
   margin: 0 auto;
   width: 100%;
   height: 100%;
-/* 
+/*
   background-color: #c7c7c7;
   background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23404040' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  */
@@ -16,7 +16,7 @@ body, html {
   left: 12px;
   /* LANCE scale for mobile   */
   transform: scale(0.44) translate(-548px, -235px);
-/* 
+/*
   top: 8%;
   left: 50%;
   transform: translate(-48%, 0%);
@@ -182,7 +182,9 @@ body, html {
   margin-top: 10px;
   width: 100%;
   position: absolute;
-  left: 100px;
+  /*   LANCE shift things over - there's only 2 pics now  */
+  /* left: 100px; */
+  left: 260px;
 }
 
 .pre_img li {
@@ -195,6 +197,9 @@ body, html {
   height: 75px;
   position: relative;
   cursor: pointer;
+  /*  LANCE box shadow bc its kinda hard to differentiate from white window  */
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  border-radius: 5px;
 }
 
 .cover {
@@ -214,6 +219,7 @@ body, html {
   width: 300px;
   box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
   position: relative;
+  /* LANCE scale for mobile   */
   transform: scale(0.447);
 }
 
@@ -221,7 +227,7 @@ body, html {
   text-align: center;
   font-weight: 600;
   font-size: 30px;
-  font-family: Helvetica;
+  font-family: 'Avenir Next', Avenir, Helvetica, sans-serif;
   color: #3d3d3d;
 }
 
@@ -229,7 +235,7 @@ body, html {
   text-align: center;
   font-weight: 600;
   font-size: 22px;
-  font-family: Helvetica;
+  font-family: 'Avenir Next', Avenir, Helvetica, sans-serif;
   color: #3d3d3d;
 }
 
@@ -237,7 +243,7 @@ body, html {
   text-align: center;
   font-weight: 600;
   font-size: 22px;
-  font-family: Helvetica;
+  font-family: 'Avenir Next', Avenir, Helvetica, sans-serif;
   color: #3d3d3d;
 }
 
@@ -245,7 +251,7 @@ body, html {
   text-align: center;
   font-weight: 600;
   font-size: 20px;
-  font-family: Helvetica;
+  font-family: 'Avenir Next', Avenir, Helvetica, sans-serif;
   color: #1DA1F2;
 }
 
@@ -274,26 +280,37 @@ body, html {
 .button {
   margin: 0px 10px 10px 0px;
   border-radius: 10px;
-  font-family: Helvetica;
+  font-family: 'Avenir Next', Avenir, Helvetica, sans-serif;
   font-size: 25px;
   color: #FFF;
   text-decoration: none;
-  background-color: #E74C3C;
+  /*  LANCE change button color to match cub pup */
+  /* background-color: #E74C3C; */
+  background-color: #737373;
+
+  /*  LANCE getting rid of unnecessary stuff  */
+  /*
   border-bottom: 5px solid #BD3E31;
   text-shadow: 0px -2px #BD3E31;
+  */
   z-index: 999;
   transition: all 0.1s;
   -webkit-transition: all 0.1s;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23); */
 }
 
+/* LANCE custom button hover and active state */
 .button:active {
-  border-bottom: 1px solid #BD3E31;
+  background: #8f8f8f;
+}
+
+.button:hover {
+  background: #8f8f8f;
 }
 
 .i {
   text-align: center;
-  font-family: Helvetica;
+  font-family: 'Avenir Next', Avenir, Helvetica, sans-serif;
   font-weight: 550;
   color: #3c3c3c3;
 }
