godskid - get rid of white background on puzzle game

--- a/gk/puzzle_responsive/style.css
+++ b/gk/puzzle_responsive/style.css
@@ -12,7 +12,7 @@ body {
   /* background-color: #52a5de; */
 }
 .page_content {
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   width: 850px;
   height: 650px;
   -ms-transform-origin: top left;
