--- a/rodwave/rags2riches_design/css/style.css
+++ b/rodwave/rags2riches_design/css/style.css
@@ -8,7 +8,7 @@ body {
 
 .header {
 	margin: auto;
-	padding-top: 30px;
+	padding-top: 20px;
 	width: 21vw;
 	min-width: 300px;
 }
@@ -28,7 +28,7 @@ body {
 }
 
 .billimg {
-	width: 21vw;
+	width: 22vw;
 	min-width: 300px;
 }
 
@@ -41,12 +41,6 @@ body {
 	padding-top: 20px;
 	width: 9vw;
 	min-width: 120px;
-}
-
-.rodbuttonimg:hover {
-	opacity: 0.75;
-	transition: opacity 0.3s;
-	-webkit-transition: opacity 0.3s;
 }
 
 .calltoaction {
@@ -63,17 +57,11 @@ body {
 }
 
 .streamingimg {
-	width: 9vw;
-	min-width: 125px;
+	width: 7vw;
+	min-width: 100px;
 	margin-top: 14px;
 	margin-left: 20px;
 	margin-right: 20px;
-}
-
-.streamingimg:hover {
-	opacity: 0.75;
-	transition: opacity 0.3s;
-	-webkit-transition: opacity 0.3s;
 }
 
 .footerlogoimg {
@@ -85,15 +73,79 @@ body {
 	margin-right: 25px;
 }
 
-.footerlogoimg:hover {
-	opacity: 0.7;
-	transition: opacity 0.3s;
-	-webkit-transition: opacity 0.3s;
-}
-
 .alignleft {
 	float: left;
 }
 .alignright {
 	float: right;
+}
+
+/* hover effects only on web - so no sticky hover on mobile */
+@media (hover: hover) {
+	.footerlogoimg:hover, .streamingimg:hover, .rodbuttonimg:hover {
+		opacity: 0.7;
+		transition: opacity 0.3s;
+		-webkit-transition: opacity 0.3s;
+	}
+}
+
+.footerlogoimg:active, .streamingimg:active, .rodbuttonimg:active {
+	opacity: 0.5;
+	transition: opacity 0.3s;
+	-webkit-transition: opacity 0.3s;
+}
+
+/* MOBILE */
+
+@media only screen and (max-width: 768px) {
+	.header {
+		padding-top: 30px;
+		width: 60vw;
+		min-width: 0;
+	}
+
+	.row {
+		display: initial;
+	}
+
+	#billinitialdiv {
+		margin-right: 0px;
+	}
+
+	.billdiv {
+		padding-top: 20px;
+	}
+
+	.billimg {
+		width: 50vw;
+		min-width: 0;
+	}
+
+	.calltoaction {
+		width: 65vw;
+		min-width: 150px;
+	}
+
+	.rodbuttonimg {
+		padding-top: 12px;
+		width: 25vw;
+		min-width: 0;
+	}
+
+	.streamingimg {
+		width: 23vw;
+		min-width: 0;
+		margin-top: 10px;
+		margin-left: 8px;
+		margin-right: 8px;
+	}
+
+	.footerlogoimg {
+		/* padding-top: 25px; */
+		width: 25vw;
+		min-width: 0;
+		margin-bottom: 15px;
+		margin-left: 3vw;
+		margin-right: 3vw;
+	}
 }
