--- a/rodwave/rags2riches_design/css/style.css
+++ b/rodwave/rags2riches_design/css/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .billimg {
-	width: 22vw;
+	width: 28vw;
 	min-width: 300px;
 }
 
@@ -38,14 +38,14 @@ body {
 }
 
 .rodbuttonimg {
-	padding-top: 20px;
+	margin-top: 20px;
 	width: 8vw;
 	min-width: 110px;
 }
 
 .calltoaction {
 	margin: auto;
-	padding-top: 16px;
+	margin-top: 16px;
 	width: 28vw;
 	min-width: 400px;
 }
@@ -57,8 +57,8 @@ body {
 }
 
 .streamingimg {
-	width: 7vw;
-	min-width: 100px;
+	width: 8vw;
+	min-width: 120px;
 	margin-top: 14px;
 	margin-left: 20px;
 	margin-right: 20px;
@@ -112,24 +112,33 @@ body {
 		margin-right: 0px;
 	}
 
+	#billgenerateddiv {
+		margin-top: 10px;
+	}
+
 	.billdiv {
 		padding-top: 20px;
 	}
 
 	.billimg {
-		width: 50vw;
+		width: 70vw;
 		min-width: 0;
 	}
 
 	.calltoaction {
 		width: 65vw;
 		min-width: 150px;
+		margin-top: 30px;
 	}
 
 	.rodbuttonimg {
-		padding-top: 12px;
+		margin-top: 14px;
 		width: 25vw;
 		min-width: 0;
+	}
+
+	.streaming {
+		margin-top: 10px;
 	}
 
 	.streamingimg {
