--- a/rodwave/rags2riches_design/css/style.css
+++ b/rodwave/rags2riches_design/css/style.css
@@ -8,7 +8,7 @@ body {
 
 .header {
 	margin: auto;
-	padding-top: 20px;
+	padding-top: 27px;
 	width: 21vw;
 	min-width: 300px;
 }
@@ -22,13 +22,13 @@ body {
 	display: flex;
 	text-align: center;
   	justify-content: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
+	margin-top: 25px;
+	margin-bottom: 20px;
 
 }
 
 .billimg {
-	width: 28vw;
+	width: 31vw;
 	min-width: 300px;
 }
 
@@ -38,14 +38,14 @@ body {
 }
 
 .rodbuttonimg {
-	margin-top: 20px;
+	margin-top: 25px;
 	width: 8vw;
 	min-width: 110px;
 }
 
 .calltoaction {
 	margin: auto;
-	margin-top: 16px;
+	margin-top: 40px;
 	width: 28vw;
 	min-width: 400px;
 }
@@ -53,13 +53,13 @@ body {
 .streaming {
 	margin: auto;
 	text-align: center;
-	margin-top: 20px;
+	margin-top: 17px;
 }
 
 .streamingimg {
 	width: 8vw;
 	min-width: 120px;
-	margin-top: 14px;
+	margin-top: 18px;
 	margin-left: 20px;
 	margin-right: 20px;
 }
@@ -68,9 +68,9 @@ body {
 	padding-top: 25px;
 	width: 11vw;
 	min-width: 140px;
-	margin-bottom: 15px;
-	margin-left: 25px;
-	margin-right: 25px;
+	margin-bottom: 25px;
+	margin-left: 32px;
+	margin-right: 32px;
 }
 
 .alignleft {
@@ -98,8 +98,12 @@ body {
 /* MOBILE */
 
 @media only screen and (max-width: 768px) {
+	body {
+		background-position: center bottom;
+	}
+
 	.header {
-		padding-top: 20px;
+		padding-top: 27px;
 		width: 60vw;
 		min-width: 0;
 	}
@@ -117,7 +121,7 @@ body {
 	}
 
 	.billdiv {
-		padding-top: 20px;
+		padding-top: 25px;
 	}
 
 	.billimg {
@@ -128,23 +132,23 @@ body {
 	.calltoaction {
 		width: 65vw;
 		min-width: 150px;
-		margin-top: 30px;
+		margin-top: 33px;
 	}
 
 	.rodbuttonimg {
-		margin-top: 14px;
+		margin-top: 18px;
 		width: 25vw;
 		min-width: 0;
 	}
 
 	.streaming {
-		margin-top: 10px;
+		margin-top: 12px;
 	}
 
 	.streamingimg {
 		width: 23vw;
 		min-width: 0;
-		margin-top: 10px;
+		margin-top: 14px;
 		margin-left: 8px;
 		margin-right: 8px;
 	}
@@ -153,8 +157,8 @@ body {
 		/* padding-top: 25px; */
 		width: 25vw;
 		min-width: 0;
-		margin-bottom: 15px;
-		margin-left: 3vw;
-		margin-right: 3vw;
+		margin-bottom: 20px;
+		margin-left: 5vw;
+		margin-right: 5vw;
 	}
 }
