bigger bill pics

--- a/rodwave/rags2riches_design/css/style.css
+++ b/rodwave/rags2riches_design/css/style.css
@@ -99,7 +99,8 @@ body {
 
 @media only screen and (max-width: 768px) {
 	body {
-		background-position: center bottom;
+		background-size: cover;
+		background-position: right;
 	}
 
 	.header {
