--- a/rodwave/rags2riches_all/css/style.css
+++ b/rodwave/rags2riches_all/css/style.css
@@ -43,6 +43,12 @@ body {
 	min-width: 110px;
 }
 
+a.disabled {
+	pointer-events: none;
+	cursor: default;
+	opacity: 0.5;
+}
+
 .calltoaction {
 	margin: auto;
 	margin-top: 40px;
@@ -162,4 +168,49 @@ body {
 		margin-left: 5vw;
 		margin-right: 5vw;
 	}
+}
+
+/* INVISIBLE CANVASES */
+.invisiblediv {
+	display: none;
+}
+
+/* PHOTO MODAL CSS */
+
+label.cabinet{
+	display: block;
+	cursor: pointer;
+}
+
+label.cabinet input.file{
+	position: relative;
+	height: 100%;
+	width: auto;
+	opacity: 0;
+	-moz-opacity: 0;
+  	filter:progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+  	margin-top:-30px;
+}
+
+/* #upload-demo {
+	width: 500px;
+	height: 450px;
+  	padding-bottom:25px;
+} */
+
+figure figcaption {
+    position: absolute;
+    bottom: 0;
+    color: #fff;
+    width: 100%;
+    padding-left: 9px;
+    padding-bottom: 5px;
+    text-shadow: 0 0 10px #000;
+}
+
+/* adding the face as an outline */
+.cr-viewport {
+   background-image: url("../assets/faceguide.png");
+   background-size:100% 100%;
+   pointer-events: none;
 }
