--- a/rodwave/rags2riches_outerframetest/css/style.css
+++ b/rodwave/rags2riches_outerframetest/css/style.css
@@ -38,18 +38,20 @@ body {
 }
 
 /* GENERATED IMG OUTER FRAME CSS */
-#generatedouterframe {
+#cameraflash {
 	position: absolute;
-	background-color: red;
-	width: 38.5vw;
-	height: 38.5vw;
-	z-index: -1;
-	transform: translate(-1vw, -1vw);
-	min-width: 369px;
-	min-height: 369px;
+	pointer-events: none;
+	width: 41.5vw;
+	height: 41.5vw;
+	z-index: 2;
+	transform: translate(-2.5vw, -2.5vw);
+	min-width: 398px;
+	min-height: 398px;
 	opacity: 0;
-	transition: opacity 0.7s;
-	-webkit-transition: opacity 0.7s;
+}
+
+#cameraflashimg {
+	width: 100%;
 }
 
 /* END GENERATED IMG OUTER FRAME CSS */
@@ -155,10 +157,10 @@ a.disabled {
 
 	/* GENERATED IMG OUTER FRAME CSS */
 
-	#generatedouterframe {
-		width: 85vw;
-		height: 85vw;
-		transform: translate(7.5vw, -2.5vw);
+	#cameraflash {
+		width: 90vw;
+		height: 90vw;
+		transform: translate(5vw, -5vw);
 		min-width: 0;
 		min-height: 0;
 	}
