--- a/rodwave/rags2riches_outerframetest_nonmin/css/style.css
+++ b/rodwave/rags2riches_outerframetest_nonmin/css/style.css
@@ -245,3 +245,11 @@ figure figcaption {
    background-size:100% 100%;
    pointer-events: none;
 }
+
+.modal-content {
+	background-color: #4f4f4f;
+}
+
+.cr-slider {
+	color: #FFF;
+}
