--- a/style_index.css
+++ b/style_index.css
@@ -1,13 +1,27 @@
 body {
-	width: 100wh;
-	height: 90vh;
+	width: 100vw;
+	height: 100vh;
 	color: #fff;
 	background: linear-gradient(111.5deg, rgba(228,247,255,1) 21.9%, rgba(255,216,194,1) 92.2%);
 	background-size: 400% 400%;
-	-webkit-animation: Gradient 10s ease infinite;
-	-moz-animation: Gradient 10s ease infinite;
-	animation: Gradient 10s ease infinite;
+	-webkit-animation: Gradient 5s ease infinite;
+	-moz-animation: Gradient 5s ease infinite;
+	animation: Gradient 5s ease infinite;
+	position: absolute;
 }
+
+/* dark mode */
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-image: linear-gradient( 112.1deg,  rgba(32,38,57,1) 11.4%, rgba(63,76,119,1) 70.2% );
+		-webkit-animation: Gradient 7s ease infinite;
+		-moz-animation: Gradient 7s ease infinite;
+		animation: Gradient 7s ease infinite;
+    }
+}
+
+.sp
 
 @-webkit-keyframes Gradient {
 	0% {
@@ -45,13 +59,15 @@ body {
 	}
 }
 
-body, html {
-	display: grid;
-}
 
-span {
-	margin: auto;
-	align-items: center;
+#julientweet {
+	/* margin: auto;
+	align-items: center; */
+	width: 600px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 @media only screen and (max-width: 768px) {
