--- a/amco/css/stylev2.css
+++ b/amco/css/stylev2.css
@@ -123,6 +123,9 @@ html {
 #youtube{
     background-image:url(../img/yo.svg);
 }
+#nts{
+	background-image:url(../img/nts.png);
+}
 
 #logo{
     position: absolute;
@@ -210,7 +213,7 @@ html {
     letter-spacing: 0.2em;
     line-height: 26px;
 	margin-bottom: 10px;
-	/* margin-left: 15px; */
+	margin-left: 15px;
 }
 .red{
     display: inline-block;
@@ -359,27 +362,29 @@ input[type = "checkbox"]:checked ~ #sound {
     position: absolute;
     z-index: 52;
 	/* lance change margins on social buttons */
-    right: 95px;
+    right: 102px;
     bottom: 100px;
     height: 45px;
     width: 260px;
 }
 
-    .icon:hover{
-        background-color: rgba(0,0,0,0.5);
-    }
+/* LANCE no background on icons when hovering, just opacity change */
+.icon:hover{
+    /* background-color: rgba(0,0,0,0.5); */
+	opacity: 0.5;
+}
 .icon{
     cursor:pointer;
     transition:0.2s;
     border-radius: 3px;
-    width: 45px;
-	height: 45px;
+    width: 38px;
+	height: 38px;
     transition:0.2s;
     display:inline-block;
     text-decoration:none;
     background-position:center center;
 	/* LANCE change icon size */
-    background-size: 42px;
+    background-size: 38px;
     background-repeat:no-repeat;
     display: inline-block;
 	margin-left: 5px;
@@ -940,6 +945,7 @@ a{
   .playing {
     height: 4vh !important;
     font-size: 1em !important;
+	margin-left: 0px;
   }
   .button {
     font-size: 1em !important
@@ -1089,6 +1095,7 @@ a{
   opacity: .7;
   /* lance: remove underline from menu */
   text-decoration: none;
+  transition: 0.3s;
 }
 
 
@@ -1255,9 +1262,11 @@ a{
 	  font-size: 20px;
   }
   .sticky .icon {
-	  width: 40px;
-	  height: 40px;
-	  background-size: 36px;
+	  width: 35px;
+	  height: 35px;
+	  background-size: 31px;
+	  margin-left: 3px;
+	  margin-right: 3px;
   }
 }
 /* LANCE hide mobile menu's black box on resizing */
