--- a/amcopreredesign/css/stylev2.css
+++ b/amcopreredesign/css/stylev2.css
@@ -1,34 +1,26 @@
 /*@import url('https://fonts.googleapis.com/css2?family=Jost&amp;family=Poppins:wght@500;600;700;800;900&display=swap');*/
 @font-face {
-    font-family: "Futura Extra Black";
-    src: url("../font/Futura-Extra-Black.ttf") format("truetype");
+    font-family: "Poppins Bold";
+    src: url("../font/Poppins-Bold.ttf") format("truetype");
     font-weight: 600;
     font-style: normal;
     font-display: auto;
 }
 @font-face {
-    font-family: "Futura Book";
-    src: url("../font/Futura-Book.ttf") format("truetype");
+    font-family: "Gotham Book";
+    src: url("../font/Gotham-Book.ttf") format("truetype");
     font-weight: 400;
-    font-style: normal;
-    font-display: auto;
-}
-@font-face {
-    font-family: "Briller Black";
-    src: url("../font/Briller-Black.ttf") format("truetype");
-    font-weight: 800;
     font-style: normal;
     font-display: auto;
 }
 
 
 ::selection {
-	/* LANCE change highlight colour to yellow */
-    background: #d6c504; /* WebKit/Blink Browsers */
+    background: #ff5c1a; /* WebKit/Blink Browsers */
     color:#fff;
 }
 ::-moz-selection {
-    background: #d6c504; /* WebKit/Blink Browsers */
+    background: #ff5c1a; /* WebKit/Blink Browsers */
     color:#fff;
 }
 
@@ -157,14 +149,13 @@ html {
 }
 #logo img {
   width: auto;
-  height: 73px;
+  height: 45px;
 }
 
 .fieue {
   font-size: 30px;
   font-weight: 600;
-  /* LANCE change AMCO title font to briller */
-  font-family: 'Briller Black',sans-serif;
+  font-family: 'Poppins Bold',sans-serif;
   margin-left: 10px;
   white-space: nowrap;
 }
@@ -175,16 +166,15 @@ html {
     color: white;
     text-align: left;
 	/* LANCE changing margins on "AMCO HIGHLIGHTS" */
-    bottom: 50px;
-    left: 8vw;
+    bottom: 30px;
+    left: 85px;
 }
 #content h2{
-    font-family: 'Futura Extra Black',sans-serif;
-    letter-spacing: 0.02em;
+    font-family: 'Poppins Bold',sans-serif;
+    letter-spacing: -0.02em;
     font-weight: 700;
     line-height: 1em;
-    /* font-size: 2.6vw; */
-	font-size: 40px;
+    font-size: 30px;
 }
 .button{
     transition: 0.3s;
@@ -218,18 +208,17 @@ html {
 .playing{
     display: inline-block;
     height: 30px;
-    font-size: 22px;
+    font-size:14px;
     text-transform: uppercase;
-    letter-spacing: 0.11em;
+    letter-spacing: 0.2em;
     line-height: 26px;
 	margin-bottom: 10px;
-	margin-left: 19px;
-	font-family: "Futura Book", sans-serif;
+	margin-left: 15px;
 }
 .red{
     display: inline-block;
     color: red;
-    font-size: 40px;
+    font-size: 35px;
     vertical-align: top;
 	/* LANCE: to fix centering on red dot */
 	margin-top: 1px;
@@ -238,13 +227,12 @@ html {
 
 #mnue a {
   /* LANCE increase font size of about/artists but not when it's on sticky menu */
-  font-size: 40px;
+  font-size: 32px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: 'Futura Extra Black', 'Futura Book',sans-serif;
+  font-family: 'Poppins Bold', 'Gotham Book',sans-serif;
   color: #fff;
   white-space: nowrap;
-  letter-spacing: 0.02em;
 }
 
 .sticky .navsec {
@@ -255,10 +243,10 @@ html {
   background: #000;
   height: 82px;
   /* LANCE sticky header fade-in */
-  -webkit-animation: sticky-header-appear 0.7s ease-in-out;
-  -moz-animation:    sticky-header-appear 0.7s ease-in-out;
-  -o-animation:      sticky-header-appear 0.7s ease-in-out;
-  animation:         sticky-header-appear 0.7s ease-in-out;
+  -webkit-animation: sticky-header-appear 0.7s ease-in-out; /* Safari 4+ */
+  -moz-animation:    sticky-header-appear 0.7s ease-in-out; /* Fx 5+ */
+  -o-animation:      sticky-header-appear 0.7s ease-in-out; /* Opera 12+ */
+  animation:         sticky-header-appear 0.7s ease-in-out; /* IE 10+, Fx 29+ */
 
 }
 
@@ -268,10 +256,10 @@ html {
   position: fixed;
   z-index: 99;
   /* LANCE sticky social icons fade-in */
-  /* -webkit-animation: sticky-social-appear 0.7s ease-in;
-  -moz-animation:    sticky-social-appear 0.7s ease-in;
-  -o-animation:      sticky-social-appear 0.7s ease-in;
-  animation:         sticky-social-appear 0.7s ease-in; */
+  -webkit-animation: sticky-header-appear 0.7s ease-in-out; /* Safari 4+ */
+  -moz-animation:    sticky-header-appear 0.7s ease-in-out; /* Fx 5+ */
+  -o-animation:      sticky-header-appear 0.7s ease-in-out; /* Opera 12+ */
+  animation:         sticky-header-appear 0.7s ease-in-out; /* IE 10+, Fx 29+ */
 }
 
 .sticky #mnue {
@@ -285,17 +273,17 @@ html {
 }
 
 .sticky #mnue a {
-	font-size: 26px;
+	font-size: 24px;
 }
 
 #mnue{
     position: absolute;
     z-index: 52;
 	/* lance change margins on about/artists */
-    right: 8vw;
-    bottom: 65px;
+    right: 85px;
+    bottom: 30px;
     text-align: center;
-    /* width: 4px; */
+    width: 300px;
     display: inline-block;
     margin-bottom: 8px;
 }
@@ -335,7 +323,7 @@ html {
 
 #controls{
     display: inline-block;
-    /* width: calc(50% - 10px); */
+    width: calc(50% - 10px);
     min-width: 270px;
     margin-top: 2px;
     text-align: left;
@@ -374,10 +362,10 @@ input[type = "checkbox"]:checked ~ #sound {
     position: absolute;
     z-index: 52;
 	/* lance change margins on social buttons */
-    right: 6.5vw;
-    bottom: 150px;
+    right: 102px;
+    bottom: 100px;
     height: 45px;
-    width: 380px;
+    width: 260px;
 }
 
 /* LANCE no background on icons when hovering, just opacity change */
@@ -387,50 +375,20 @@ input[type = "checkbox"]:checked ~ #sound {
 }
 .icon{
     cursor:pointer;
-    transition: opacity 0.2s;
+    transition:0.2s;
     border-radius: 3px;
-    width: 52px;
-	height: 52px;
-    /* transition:0.2s; */
+    width: 38px;
+	height: 38px;
+    transition:0.2s;
     display:inline-block;
     text-decoration:none;
     background-position:center center;
 	/* LANCE change icon size */
-    background-size: 52px;
+    background-size: 38px;
     background-repeat:no-repeat;
     display: inline-block;
-	margin-left: 8px;
-	margin-right: 8px;
-}
-
-.sticky .icon {
-	width: 40px;
-	height: 40px;
-	background-size: 40px;
 	margin-left: 5px;
 	margin-right: 5px;
-}
-
-.icon-player {
-    cursor:pointer;
-    transition: opacity 0.2s;
-    border-radius: 3px;
-    width: 48px;
-	height: 48px;
-    /* transition:0.2s; */
-    display:inline-block;
-    text-decoration:none;
-    background-position:center center;
-	/* LANCE change icon size */
-    background-size: 48px;
-    background-repeat:no-repeat;
-    display: inline-block;
-	margin-left: 8px;
-	margin-right: 8px;
-}
-.icon-player:hover{
-    /* background-color: rgba(0,0,0,0.5); */
-	opacity: 0.5;
 }
 
 
@@ -606,7 +564,7 @@ a{
         width: 100%;
         text-align: center;
         right: 0;
-        bottom: 12vh !important;
+        bottom: 14vh;
     }
     #subscribe{
         left: 0;
@@ -751,17 +709,16 @@ a{
   display: flex;
 }
 #about {
-  background-color: #ffea00;
+  background-color: #242627;
   display: flex;
   position: relative;
   /* LANCE add shadow here */
-  /* box-shadow: 0px 150px 84px -84px rgba(0,0,0,1) inset; */
+  box-shadow: 0px 150px 84px -84px rgba(0,0,0,1) inset;
 }
 .about-cont {
   margin: 0 auto;
-  color: #000;
+  color: #fff;
   z-index: 11;
-  text-align: center;
   /* LANCE: fix margins for about section to match mockup */
   /* padding: 100px 50px; */
   padding: 120px 100px;
@@ -770,18 +727,14 @@ a{
   font-weight: 800;
   font-size: 60px;
   line-height: 1.3;
-  font-family: 'Futura Extra Black',sans-serif;
+  font-family: 'Poppins Bold',sans-serif;
   color: #ff1f0a;
 }
 .about-desc {
-  font-family: 'Futura Book',sans-serif;
-  font-size: 25px;
+  font-family: 'Gotham Book',sans-serif;
+  font-size: 22px;
   line-height: 1.5;
   margin-top: 35px;
-}
-.about-logo img {
-  width: 190px;
-  margin-bottom: 20px;
 }
 #artist {
   /* background: #242627; */
@@ -789,22 +742,20 @@ a{
   background: #000000;
 }
 .artis-title {
-  font-family: 'Futura Extra Black',sans-serif;
+  font-family: 'Poppins Bold',sans-serif;
   font-weight: 800;
-  font-size: 68px;
+  font-size: 65px;
   padding: 7px;
   text-align: center;
   z-index: 1;
   position: relative;
-  /* LANCE change banner behind "artists" to black */
-  background: #000000;
-  /* box-shadow: 0px -40px 84px 39px rgba(0,0,0,1); */
+  background: #ea3827;
+  box-shadow: 0px -40px 84px 39px rgba(0,0,0,1);
   /* lance change margin under "artist  title" */
   margin-bottom: 10px;
-  letter-spacing: 0.02em;
 }
 .artis-title2 {
-  font-family: 'Futura Extra Black',sans-serif;
+  font-family: 'Poppins Bold',sans-serif;
   font-weight: 800;
   font-size: 40px;
   padding: 7px;
@@ -862,7 +813,7 @@ a{
   letter-spacing: 1px;
   /* font-size: 18px; */
   font-size: 21px;
-  font-family: 'Futura Extra Black',sans-serif;
+  font-family: 'Poppins Bold',sans-serif;
   color: #fff;
   text-transform: uppercase;
   /* LANCE no pointer events on artname to avoid it from blocking artphoto hover events */
@@ -874,12 +825,12 @@ a{
 /* lance artist name text has background on hover */
 .artphoto:hover .artname {
   /* opacity: .6; */
-  background: #ffea00;
+  background: #ea3827;
 }
 
 .artphoto:active .artname {
   /* opacity: .6; */
-  background: #ffea00;
+  background: #ea3827;
 }
 
 .artphoto {
@@ -918,9 +869,6 @@ a{
   .fieue {
     display: unset;
   }
-  .sticky .navsec #logo {
-    top: 24px !important;
-  }
 }
 @media (max-width: 1114px) {
   .about-big {
@@ -932,49 +880,15 @@ a{
     line-height: 1.5;
     margin-top: 22px;
   }
-  .about-logo img {
-	  width: 120px;
-  }
-  /* LANCE make homepage stuff smaller mid-width */
-  #content h2{
-	  font-size: 30px;
-  }
-  .playing {
-	  font-size: 18px;
-	  margin-left: 13px;
-  }
-  #mnue a {
-	  font-size: 30px;
-  }
-  .icon {
-	  width: 43px;
-	  height: 43px;
-	  background-size: 43px;
-	  margin-left: 5px;
-  	  margin-right: 5px;
-  }
-  #social {
-	  width: 300px;
-	  right: 6.3vw;
-	  bottom: 130px;
-  }
-
-  .icon-player {
-	  width: 40px;
-	  height: 40px;
-	  background-size: 40px;
-	  margin-left: 5px;
-	  margin-right: 5px;
-  }
 }
 .fttex {
-  font-family: 'Futura Book',sans-serif;
+  font-family: 'Gotham Book',sans-serif;
   font-size: 11px;
   letter-spacing: 1.2px;
   opacity: 0.5;
 }
 .fttex2 {
-  font-family: 'Futura Book',sans-serif;
+  font-family: 'Gotham Book',sans-serif;
   font-size: 10px;
   opacity: 0.5;
 }
@@ -990,7 +904,7 @@ a{
 @media (min-width: 360px) and (max-width: 767px) {
 	/* LANCE move content to center of page like mobile */
 	#content{
-		top: 50vh;
+		top: 54vh;
 		transform: translateY(-50%);
 		left: 0;
 		width: 100%;
@@ -1010,7 +924,7 @@ a{
         width: 100%;
         text-align: center;
         right: 0;
-        bottom: 17vh;
+        bottom: 12vh;
     }
 	/* END */
   .dsj {
@@ -1081,8 +995,8 @@ a{
 	  padding-right: 4px !important;
   }
   .sticky #mnue a {
-	  font-family: 'Futura Book', sans-serif;
-	  padding-right: 25px;
+	  font-family: 'Gotham Book', sans-serif;
+	  padding-right: 29px;
   }
 }
 .artname2 {
@@ -1090,7 +1004,7 @@ a{
   font-weight: 600;
   letter-spacing: 1px;
   font-size: 18px;
-  font-family: 'Futura Book',sans-serif;
+  font-family: 'Gotham Book',sans-serif;
 }
 .ipng img {
   margin-left: 2px;
@@ -1271,27 +1185,6 @@ a{
   100% { opacity: 1; }
 }
 
-/* LANCE sticky social opacity animation */
-@-webkit-keyframes sticky-social-appear {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
-}
-
-@-moz-keyframes sticky-social-appear {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
-}
-
-@-o-keyframes sticky-social-appear {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
-}
-
-@keyframes sticky-social-appear {
-  0%   { opacity: 0; }
-  100% { opacity: 1; }
-}
-
 .intro .prebuton {
   position: fixed;
   width: 460px;
@@ -1347,9 +1240,6 @@ a{
     width: 510px !important;
     justify-: center;
   }
-  .sticky .navsec #logo {
-    top: 24px !important;
-  }
 }
 @media (min-width: 1113px) and (max-width: 1366px) {
   .pre-load #logo {
@@ -1365,9 +1255,9 @@ a{
   #logo {
     width: 34px !important;
   }
-  /* .abt {
+  .abt {
 	  margin-right: 20px;
-  } */
+  }
   .sticky #mnue a {
 	  font-size: 20px;
   }
@@ -1391,13 +1281,7 @@ a{
     margin-top: 8px;
   }
   #logo img {
-    height: 50px !important;
-  }
-  .sticky .navsec #logo img {
     height: 30px !important;
-  }
-  .sticky .navsec #logo {
-	top: 18px;
   }
   .fieue {
     font-size: 17px;
@@ -1419,11 +1303,11 @@ a{
 }
 @media (min-width: 1000px) {
   .sticky .navsec #logo img {
-    height: 40px;
+    height: 35px;
   }
-  /* .sticky .navsec #logo {
-    top: 18px !important;
-  } */
+  .sticky .navsec #logo {
+    top: 23px !important;
+  }
   .sticky .fieue {
     font-size: 26px;
     line-height: 1.4;
