--- a/RODWAVE2021/css/style.css
+++ b/RODWAVE2021/css/style.css
@@ -21,22 +21,30 @@ label {
 	font-weight: 400;
 }
 
-input, select {
+input, select, button {
 	font-size: 20px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-left: 15px;
-	padding-right: 25px;
 	margin-top: 10px;
 	margin-bottom: 30px;
 	margin-left: 10px;
 	margin-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
 	color: #000000;
 	border: 3px solid #d0c8aa;
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
 	box-shadow: 0px 0px 10px #d0c8aa;
+}
+
+input, select {
+	padding-left: 15px;
+	padding-right: 25px;
+}
+
+input[type=submit] {
+	padding-left: 25px;
+	padding-right: 25px;
 }
 
 select {
