--- a/RODWAVE2021/css/style.css
+++ b/RODWAVE2021/css/style.css
@@ -45,6 +45,7 @@ input, select {
 input[type=submit] {
 	padding-left: 25px;
 	padding-right: 25px;
+	background-color: #FFFFFF;
 }
 
 select {
@@ -161,14 +162,19 @@ a.disabled {
 
 @media only screen and (max-width: 768px) {
 	body {
-		background-size: cover;
-		background-position: right;
+		/* background-size: cover;
+		background-position: right; */
+		font-size: 17px;
 	}
 
 	.header {
 		padding-top: 27px;
-		width: 60vw;
+		width: 67vw;
 		min-width: 0;
+	}
+
+	input, select, button {
+		font-size: 16px;
 	}
 
 	.row {
