--- a/RODWAVE2021/css/style.css
+++ b/RODWAVE2021/css/style.css
@@ -22,6 +22,9 @@ label {
 }
 
 input, select, button {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 	font-size: 20px;
 	margin-top: 10px;
 	margin-bottom: 30px;
@@ -34,7 +37,7 @@ input, select, button {
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
-	box-shadow: 0px 0px 10px #d0c8aa;
+	box-shadow: 0px 0px 11px #d0c8aa;
 }
 
 input, select {
@@ -49,9 +52,9 @@ input[type=submit] {
 }
 
 select {
-	-webkit-appearance: none;
+	/* -webkit-appearance: none;
 	-moz-appearance: none;
-	appearance: none;
+	appearance: none; */
 	background: url("../assets/arrow.png") no-repeat;
 	background-position: right center;
 	background-size: 18px;
