fix for splash background

--- a/RODWAVE2021/css/style.css
+++ b/RODWAVE2021/css/style.css
@@ -203,6 +203,22 @@ a.disabled {
 	cursor: pointer;
 }
 
+/* background fix for mobile */
+.splash:after{
+	content:"";
+	position:fixed; /* stretch a fixed position to the whole screen */
+	top:0;
+	height:100vh; /* fix for mobile browser address bar appearing disappearing */
+	left:0;
+	right:0;
+	z-index:-1; /* needed to keep in the background */
+	background: url("../assets/background.jpg") center top;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 .splashcontent {
 	width: 45vw;
 	max-width: 800px;
@@ -215,6 +231,8 @@ a.disabled {
     transform: translate(-50%, -50%);
 	text-align: center;
 }
+
+/* END SPLASH */
 
 .fullwidth {
 	width: 99%;
@@ -264,6 +282,8 @@ a.disabled {
 		min-width: 120px;
 		margin: auto;
 	}
+
+
 
 }
 /* MOBILE */
